[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garg_dspy"
version = "0.1.0"
description = "GARG: Goal-Augmented Reverse Generation toolkit (DSPy-style)"
readme = "README.md"
requires-python = ">=3.9"

[project.dependencies]
python-dotenv = "*"
openai = "==1.9.0"
anthropic = "==0.3.0"
google-generativeai = "*"
sphinx = "*"
pytest = "*"
